--- a/styles/CategoryPage.module.css
+++ b/styles/CategoryPage.module.css
@@ -18,9 +18,3 @@
   padding: 2rem;
   color: #666;
 }
-
-.caricamento {
-  text-align: center;
-  padding: 2rem;
-  color: #666;
-}
